--- a/salikneta/templates/salikneta/notifications.html
+++ b/salikneta/templates/salikneta/notifications.html
@@ -27,7 +27,7 @@
               <div class="details">
                 <p>
                   <muted>{{ notif.get_time_ago }}</muted>
-                  <br/>{{notif.msg }}<br/>
+                  <br/>{{notif.msg|linebreaksbr }}<br/>
                 </p>
               </div>
             </div>
