--- a/salikneta/templates/salikneta/includes/head.html
+++ b/salikneta/templates/salikneta/includes/head.html
@@ -60,7 +60,40 @@
   <script type="text/javascript" src="{% static 'lib/bootstrap-timepicker/js/bootstrap-timepicker.js'%}"></script>
   <script src="{% static 'lib/advanced-form-components.js'%}"></script>
 
-  <style>
+<script>
+    initNotif();
+    function openNotif() {
+        $.get("{% url 'open_notifs' %}");
+        $("#notif_num").hide();
+    }
+    function initNotif(){
+       let notif_data = $.get("{% url 'check_notifs' %}");
+       notif_data.done(function(results){
+       obj = results.data;
+       for (i in obj){
 
-  </style>
+       console.log(obj);
+               if (obj[i].num_notif === 0){$("#notif_num").hide();}
+               else{$("#notif_num").show().html(obj[i].num_notif);}
+               item = '<li><a href="/notifications/">';
+               if(obj[i].msg.substring(0, 9) == "Inventory"){
+                   item += "Click to check expiring products";
+               }
+               else{
+                   item += obj[i].msg;
+               }
+               item +='<br><span class="small italic">'+obj[i].timestamp+'</span></a></li>';
+               $("#notif_list").append(item);
+           }
+               $("#notif_list").append('<li><a href="/notifications/">See all notifications</a></li>');
+
+        });
+    }
+    let stock_d =  $.get("{% url 'get_num_lowstock' %}");
+    stock_d.done(function(results){
+        if(results.numb > 0){
+            $("#warn").html(results.numb).show();
+        }
+    });
+</script>
 </head>
