--- a/salikneta/templates/salikneta/includes/marketing_header.html
+++ b/salikneta/templates/salikneta/includes/marketing_header.html
@@ -4,8 +4,11 @@
     //window.location.href = "http://127.0.0.1:8000/salikneta/";
     </script>
 {% endif %}
-
-
+<style>
+    .dropdown-menu>li>a {
+        white-space: normal;
+    }
+</style>
 <!-- **********************************************************************************************************************************************************
         TOP BAR CONTENT & NOTIFICATIONS
         *********************************************************************************************************************************************************** -->
@@ -128,35 +131,5 @@
         <!-- sidebar menu end-->
       </div>
     </aside>
-<script>
-    initNotif();
-    function openNotif() {
-        $.get("{% url 'open_notifs' %}");
-        $("#notif_num").hide();
-    }
-    function initNotif(){
-       let notif_data = $.get("{% url 'check_notifs' %}");
-       notif_data.done(function(results){
-       obj = results.data;
-       for (i in obj){
 
-       console.log(obj);
-               if (obj[i].num_notif === 0){$("#notif_num").hide();}
-               else{$("#notif_num").show().html(obj[i].num_notif);}
-               item = '<li><a href="#">';
-               item += obj[i].msg;
-               item +='<br><span class="small italic">'+obj[i].timestamp+'</span></a></li>';
-               $("#notif_list").append(item);
-           }
-               $("#notif_list").append('<li><a href="/salikneta/notifications/">See all notifications</a></li>');
-
-        });
-    }
-    let stock_d =  $.get("{% url 'get_num_lowstock' %}");
-    stock_d.done(function(results){
-        if(results.numb > 0){
-            $("#warn").html(results.numb).show();
-        }
-    });
-</script>
     <!--sidebar end-->
