--- a/salikneta/templates/salikneta/pos/pos.html
+++ b/salikneta/templates/salikneta/pos/pos.html
@@ -87,7 +87,7 @@
                                           <b>Net Total</b>
                                       </div>
                                       <div class="col-md-6 text-right">
-                                          P<b id="net_total"> 0.0</b>
+                                          P <b id="net_total"> 0.00</b>
                                       </div>
                                   </div>
                                 </div>
@@ -185,13 +185,13 @@
                         <img src="/static/media/{{ p.img_path }}" style="width:100%;height: 180px">
                         <div class="w3-container" style="text-align: left; font-size: 10px">
                           {% if p.unitsInStock > 0 %}
-                               <b style="color: black; font-size: 12px">{{ p.name }}</b><span style="float:right; font-size: 10px" class="label label-success">{{ p.unitsInStock }}</span>
+                               <b style="color: black; font-size: 12px">{{ p.name }}</b><span style="float:right; font-size: 10px" class="label label-success">{{ p.unitsInStock|floatformat:"-3" }}</span>
                           {% else %}
                                 <span class="label label-danger">NO STOCK</span><b style="color: black; font-size: 12px">{{ p.name }}</b>
                           {% endif %}
                             <div>
                           <b style="float:right;font-size: 10px" class="text-muted">{{ p.idCategory.name }}</b>
-                          <p style="float:left;font-size: 10px" class="text-muted">P{{ p.suggestedUnitPrice }}/{{ p.unitOfMeasure }}</p>
+                          <p style="float:left;font-size: 10px" class="text-muted">P{{ p.suggestedUnitPrice|floatformat:"2" }}/{{ p.unitOfMeasure }}</p>
                             </div>
                         </div>
                     </div>
