--- a/salikneta/templates/salikneta/includes/marketing_header.html
+++ b/salikneta/templates/salikneta/includes/marketing_header.html
@@ -42,7 +42,7 @@
           <li id="header_notification_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" onclick="openNotif()"  href="#">
               <i class="fa fa-bell-o"></i>
-              <span class="badge bg-warning" id="notif_num" style="display: none"></span>
+              <span class="badge bg-warning" id="notif_num"></span>
               </a>
             <ul class="dropdown-menu extended notification" id="notif_list">
               <div class="notify-arrow notify-arrow-yellow"></div>
