okay na.. pag may sunod pang functionalities na malalaki alam na ;)

--- a/salikneta/templates/salikneta/transferOrderProducts.html
+++ b/salikneta/templates/salikneta/transferOrderProducts.html
@@ -259,7 +259,7 @@ s
                            
                           </div>
                           <br>
-                          <input type="checkbox" id="lowStocksCheckbox"> Low stocks
+{#                          <input type="checkbox" id="lowStocksCheckbox"> Low stocks#}
                           <br><br>
                           <div class="row">
                             <div class="col-md-12">
