--- a/salikneta/templates/salikneta/produceItems.html
+++ b/salikneta/templates/salikneta/produceItems.html
@@ -10,53 +10,133 @@
         *********************************************************************************************************************************************************** -->
     <!--main content start-->
 
-<section id="main-content">
-      <section class="wrapper">
-        <div class="row mt">
-          <div class="col-lg-12">
-            <div class="form-panel">
-              <h4 class="mb"><i class="fa fa-angle-right"></i> Produce Products</h4>
-              <h5 class="mb">Select a Product</h5>
-              <select  class="form-control" name="products" id="products">
-                    <option value="0"></option>
-                    {% for product in products %}
-                      <option value="{{product.pk}}">{{product.name}}</option>
-                    {% endfor %}
-              </select>
-              <br>
-              <h5 id="currentStock" class="mb">Units in Stock: </h5>
-              <h5 id="canProduce" class="mb">Can produce: </h5>
-            <div class="form-inline" role="form">
-                <div class="form-group">
-                  <input class="form-control" type="number" min=1 id="amount" name="amount" value="" placeholder="Enter quantity">
+        <section id="main-content">
+              <section class="wrapper">
+                <div class="row mt">
+                  <div class="col-lg-12">
+                    <div class="form-panel">
+                      <h4 class="mb"><i class="fa fa-angle-right"></i> Produce Products</h4>
+                      <h5 class="mb">Select a Product</h5>
+                      <select  class="form-control" name="products" id="products">
+                            <option value="0"></option>
+                            {% for product in products %}
+                              <option value="{{product.pk}}">{{product.name}}</option>
+                            {% endfor %}
+                      </select>
+                      <br>
+                      <h5 id="currentStock" class="mb">Units in Stock: </h5>
+                      <h5 id="canProduce" class="mb">Can produce: </h5>
+                    <div class="form-inline" role="form">
+                        <div class="form-group">
+                          <input class="form-control" type="number" min=1 id="amount" name="amount" value="" placeholder="Enter quantity">
+                        </div>
+                        <button class="btn btn-success btn-md" style="margin-bottom: 1vh" id="produceItemButton" disabled>Produce Items</button>
+                      </div>
+                    <br>
+                        <table id="itm_tbl" class="table table-bordered table-striped table-condensed">
+                          <thead>
+                            <tr>
+                              <th>Raw Material</th>
+                              <th>Quantity Needed</th>
+                              <th>UOM</th>
+                              <th>Current Stocks</th>
+                            </tr>
+                          </thead>
+                          <tbody id ="itemsBody" >
+                          </tbody>
+                        </table>
+                        <script>
+                            $(document).ready(function() {
+                                $('#itm_tbl').DataTable();
+                            });
+                        </script>
+                    </div>
+                  </div>
                 </div>
-                <button class="btn btn-success btn-md" style="margin-bottom: 1vh" id="produceItemButton" disabled>Produce Items</button>
-              </div>
-            <br>
-                <table id="itm_tbl" class="table table-bordered table-striped table-condensed">
-                  <thead>
-                    <tr>
-                      <th>Raw Material</th>
-                      <th>Quantity Needed</th>
-                      <th>UOM</th>
-                      <th>Current Stocks</th>
-                    </tr>
-                  </thead>
-                  <tbody id ="itemsBody" >
-                  </tbody>
-                </table>
-                <script>
-                    $(document).ready(function() {
-                        $('#itm_tbl').DataTable();
-                    });
-                </script>
-            </div>
-          </div>
-        </div>
-      </section>
-</section>
+
+                <div class="row mt">
+                  <div class="col-lg-12">
+                    <div class="form-panel">
+                      <h4 class="mb"><i class="fa fa-angle-right"></i> Production</h4>
+                        <table id="production_table" class="table table-bordered table-striped table-condensed">
+                          <thead>
+                            <tr>
+                              <th>Product</th>
+                              <th>To produce</th>
+                              <th>Status</th>
+                              <th>Actual produced</th>
+                              <th>UOM</th>
+                              <th>Start</th>
+                              <th>Finish (date)</th>
+                            </tr>
+                          </thead>
+                          <tbody id ="production_body" >
+                          {% for p in production %}
+                              <tr>
+                                <td>{{ p.idProductCount.idProduct.name }}</td>
+                                <td>{{ p.count }}</td>
+                                  {% if p.status == 0 %}
+                                    <td>In production</td>
+                                  {% elif p.status == 1 %}
+                                      <td>Finished</td>
+                                  {% endif %}
+                                <td>{{ p.produced }}</td>
+                                <td>{{ p.idProductCount.idProduct.unitOfMeasure }}</td>
+                                <td>{{ p.dateStartProduction|date:"Y/m/d H:i:s" }}</td>
+                              {% if p.status == 0 %}
+                                  <td><button class="btn btn-round btn-primary" data-toggle="modal" data-target="#myModal"
+                                          pk="{{ p.pk }}" productName="{{ p.idProductCount.idProduct.name }}" toProduce="{{ p.count }}"
+                                          uom="{{ p.idProductCount.idProduct.unitOfMeasure }}"  >
+                                  Finish</button></td>
+                              {% else %}
+                                  <td>{{ p.dateFinishProduction|date:"Y/m/d H:i:s" }}</td>
+                              {% endif %}
+{#                                {% if p.status == 0 %}#}
+{#                                    <td><button class="btn btn-round btn-primary" data-toggle="modal" data-target="#myModal">View</button></td>#}
+{#                                {% elif p.status == 1 %}#}
+{#                                    <td>Finished</td>#}
+{#                                {% endif %}#}
+                              </tr>
+                          {% endfor %}
+                          </tbody>
+                        </table>
+                        <script>
+                            $(document).ready(function() {
+                                $('#itm_tbl').DataTable();
+                                $('#production_table').DataTable();
+                            });
+                        </script>
+                    </div>
+                  </div>
+                </div>
+              </section>
+        </section>
   </section>
 </body>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">PRODUCE</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div id="toProduce"></div><br>
+                        <div class="form-inline" role="form">
+                        <div class="form-group">
+                          <input class="form-control" type="number" min=1 id="amountModal" name="amount" value="" placeholder="Enter quantity">
+                          <input class="hidden" id="hiddenPK" value="">
+                        </div>
+                        <button class="btn btn-success btn-md" style="margin-bottom: 1vh" id="produceItemButtonModal">Produce Items</button>
+                      </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
 <script>
     $(document).ready(function(){
@@ -170,6 +250,49 @@
       $("#amount").val('');
 
       $.ajax({
+          url: '{% url "ajaxToProduceItems" %}',
+          data: {
+            "productPK":productPK,
+            "amount":amount,
+          },
+          dataType: 'json',
+          success: function(data){
+              alert(data[0].message);
+              location.reload();
+          },
+          error: function () {
+            alert("error");
+          },
+
+        });
+
+      {#$.ajax({#}
+      {#    url: '{% url "ajaxProduceItems" %}',#}
+      {#    data: {#}
+      {#      "productPK":productPK,#}
+      {#      "amount":amount,#}
+      {#    },#}
+      {#    dataType: 'json',#}
+      {#    success: function(data){#}
+      {#        alert("Produced " + amount + " " + data[0].uom + " for product: " + $("option:selected", $("#products")).text());#}
+      {#        $("#canProduce").html('Can produce: ' + data[0].amount + " " + data[0].uom);#}
+      {#        $("#currentStock").html('Units in Stock: ' + data[0].unitsInStockProduct + " " + data[0].uom);#}
+      {#        update_table(data);#}
+      {#    },#}
+      {#    error: function () {#}
+      {#      alert("error");#}
+      {#    },#}
+      {##}
+      {#  });#}
+
+    });
+
+    $( "#produceItemButtonModal" ).click(function() {
+      var productPK = $( "#hiddenPK" ).val();
+      var amount = $( "#amountModal" ).val();
+
+
+      $.ajax({
           url: '{% url "ajaxProduceItems" %}',
           data: {
             "productPK":productPK,
@@ -177,16 +300,26 @@
           },
           dataType: 'json',
           success: function(data){
-              alert("Produced " + amount + " stocks for product: " + $("option:selected", $("#products")).text());
-              $("#canProduce").html('Can produce: ' + data[0].amount + " " + data[0].uom);
-              $("#currentStock").html('Units in Stock: ' + data[0].unitsInStockProduct + " " + data[0].uom);
-              update_table(data);
+              alert("Produced " + amount + " " + data[0].uom + " for product: " + data[0].name);
+              location.reload()
           },
           error: function () {
             alert("error");
           },
 
         });
+
+    });
+
+    $(".btn").click(function () {
+        var pk = $(this).attr("pk");
+        var name = $(this).attr("productName");
+        var toProduce = $(this).attr("toProduce");
+        var uom = $(this).attr("uom");
+
+        $("#hiddenPK").val(pk);
+        $("#myModalLabel").html("PRODUCE " + name);
+        $("#toProduce").html("To produce: " + toProduce + " " + uom);
 
     });
 
