--- a/salikneta/templates/salikneta/reports/inventory_report.html
+++ b/salikneta/templates/salikneta/reports/inventory_report.html
@@ -17,7 +17,7 @@
             <div class="form-panel">
               <h4 class="mb"><i class="fa fa-line-chart"></i> Generate Inventory Report</h4>
                <div class="row">
-                    <div class="col-md-6" style="padding-right: 50px">
+                    <div class="col-md-4" style="padding-right: 50px">
                         <h6>Monthly</h6>
                         <form action="{% url 'inventory_report_detail' %}" name="month_report" id="month_report" method="post">
                             {% csrf_token %}
@@ -35,7 +35,7 @@
                             </center>
                         </form>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <h6>Date Range</h6>
                         <form action="{% url 'inventory_report_detail' %}"  method="post">
                             {% csrf_token %}
@@ -49,6 +49,15 @@
                             <center>
                             <input type="submit" name="activate" class="btn btn-primary btn-fill" value="GENERATE" />
                             </center>
+                        </form>
+                    </div>
+                    <div class="col-md-4">
+                        <h6>Low stocks for today</h6>
+                        <form action="{% url 'inventory_report_detail' %}"  method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="type" value="low">
+                            <input type="submit" name="activate" class="btn btn-primary btn-block" value="GENERATE" />
+
                         </form>
                     </div>
                 </div>
