--- a/salikneta/templates/salikneta/reports/inventory_report_detail.html
+++ b/salikneta/templates/salikneta/reports/inventory_report_detail.html
@@ -17,12 +17,20 @@
                 <div class="pull-right" style="margin-top: 6vh;margin-right: 5vw"><button class="btn btn-default" onclick="printDiv('print_div')"> <i class="fa fa-print"></i> Print</button></div>
             <div class="form-panel" id="print_div" style="padding: 50px">
                 <div class="row">
-                        <h4 class="mb"><i class="fa fa-angle-right"></i> Inventory Audit Report -</h4>
+                    {% if gen_info == "low stock" %}
+
+                        <h3 class="mb"><i class="fa fa-angle-right"></i> Inventory Low Stock Report ({{ request.session.branch }} branch)-</h3>
+{#                        <div class="pull-right" style="margin-right: 2vw"><img src="{% static 'img/salikneta_ico.png' %}" alt="salikneta logo" width="100" height="80"></div>#}
+                        <h4>Date: {{ datetime|date:"Y/m/d" }}</h4>
+                        <h4>Time: {{ datetime|date:"H:i:s" }}</h4>
+                    {% else %}
+                        <h4 class="mb"><i class="fa fa-angle-right"></i> Inventory Audit Report ({{ request.session.branch }} branch)-</h4>
                         <h5>{{ gen_info.message }}</h5>
                         <h5>Total Backloads: {{ gen_info.total_backloads }}</h5>
                         <h5>Total Transfered In: {{ gen_info.transfer_in }}</h5>
                         <h5>Total Transfered Out: {{ gen_info.transfer_out }}</h5>
                         <h5>Total Sales Count: {{ gen_info.total_sales_ct }}</h5>
+                    {% endif %}
                 </div>
             <style>
               .bdr{
@@ -39,7 +47,31 @@
                   text-align: right;
               }
           </style>
-                <table id="sup_tbl" class="table table-bordered table-striped table-condensed" style="width: 100%;border-width: 1px" >
+            {% if gen_info == "low stock" %}
+                <table id="itm_tbl" class="table table-bordered table-striped table-condensed" style="width: 100%;border-width: 1px" >
+                  <thead>
+                    <tr>
+                      <th>Product</th>
+                      <th>UOM</th>
+                      <th>Current Inventory</th>
+                      <th>Re-order Level</th>
+                    </tr>
+                  </thead>
+                  <tbody id ="sales_tbl">
+                    {% for r in report_data %}
+                        {% if r.unitsInStock < r.reorderLevel %}
+                            <tr>
+                                <td class="cell_bdr" style="border: 1px solid black">{{ r.product }}</td>
+                                <td class="cell_bdr txt_al_center" style="border: 1px solid black">{{ r.uom }}</td>
+                                <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.unitsInStock }}</td>
+                                <td class="cell_bdr txt_al_right" style="border: 1px solid black">{{ r.reorderLevel }}</td>
+                            </tr>
+                        {% endif %}
+                    {% endfor %}
+                  </tbody>
+                </table>
+            {% else %}
+                <table id="itm_tbl" class="table table-bordered table-striped table-condensed" style="width: 100%;border-width: 1px" >
                   <thead>
                     <tr>
                       <th>Product</th>
@@ -69,6 +101,7 @@
                     {% endfor %}
                   </tbody>
                 </table>
+            {% endif %}
             </div>
           </div>
         </div>
@@ -83,6 +116,7 @@
         var html = '<html><head>'+
                '<title>Inventory Report {{ gen_info.message }}</title>'+
                '</head><body style="background:#ffffff;">'+
+               '<img src="/static/img/salikneta_ico.png" alt="salikneta logo" width="100" height="100" align="right">'+
                printCont.innerHTML+
                '</body></html>'+printStr;
         var WindowObject =window.open('',"Print Window",
@@ -114,5 +148,14 @@
                 }
            });
     }
+</script>
+<script>
+    $(document).ready(function() {
+        $('#itm_tbl').DataTable({
+            searching: false,
+            paging: false,
+            info: false
+        });
+    });
 </script>
             <!--custom chart end-->
