--- a/salikneta/templates/salikneta/includes/pos_header.html
+++ b/salikneta/templates/salikneta/includes/pos_header.html
@@ -19,14 +19,14 @@
         <img src="{% static 'img/salikneta_ico.png' %}" style="height: 3vh;width:2vw;">
       </div>
       <!--logo start-->
-      <a href="{% url 'home' %}" class="logo"><b>SALIKNETA<span>-POSIS</span></b></a>
+      <a href="{% url 'home' 0 'ma' %}" class="logo"><b>SALIKNETA<span>-POSIS</span></b></a>
       <!--logo end-->
       <div class="nav notify-row" id="top_menu">
         <!--  notification start -->
         <ul class="nav top-menu">
           <!-- settings start -->
          <li class="dropdown">
-            <a  class="dropdown-toggle" href="{% url 'home' %}">
+            <a  class="dropdown-toggle" href="{% url 'home' 0 'ma' %}">
               <i class="fa fa-dashboard"></i>
             </a>
           </li>
