--- a/salikneta/templates/salikneta/pos/pos.html
+++ b/salikneta/templates/salikneta/pos/pos.html
@@ -38,7 +38,7 @@
         {% endif %}
     </script>
   <section id="container">
-      {% include 'salikneta/includes/pos_header' %}
+      {% include 'salikneta/includes/pos_header.html' %}
 
       <section class="wrapper site-min-height">
         <div class="row">
